fix mobile to flex-wrap

--- a/src/components/daoFilter/DaoFilter.scss
+++ b/src/components/daoFilter/DaoFilter.scss
@@ -1,11 +1,14 @@
+@import '../../variables';
+
 .DaoFilter {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
+  flex-wrap: wrap;
 
   & .input {
-    width: 200px;
+    width: 100%;
   }
 }
 
